--- a/Applied_Machine_Learning_Assignment.ipynb
+++ b/Applied_Machine_Learning_Assignment.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "o3Y1T80HvTAW"
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -366,7 +366,7 @@
        "4   China"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,26 +378,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Other                 31680\n",
-       "Italy                 31680\n",
+       "Iran                  31680\n",
+       "Germany               31680\n",
+       "Republic of Korean    31680\n",
+       "China                 31680\n",
+       "Spain                 31680\n",
        "France                31680\n",
        "Other-EUR             31680\n",
-       "Germany               31680\n",
-       "Iran                  31680\n",
        "UAE                   31680\n",
-       "Spain                 31680\n",
-       "China                 31680\n",
-       "Republic of Korean    31680\n",
+       "Other                 31680\n",
+       "Italy                 31680\n",
        "Name: Country, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "4        0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        "[316800 rows x 24 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1135,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,12 +1146,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "X= pd.DataFrame.to_numpy(df.drop(['Condition'],axis=1))\n",
     "y= pd.DataFrame.to_numpy(df['Condition'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]]),\n",
+       " array(['1', '1', '1', ..., '0', '0', '0'], dtype=object))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X,y"
    ]
   },
   {
@@ -1163,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1210,19 +1237,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 1 1 0 0 0 0 0 0 1 0 0 0 1 0 0 0 1 'No' 'No' 'No' '3' 0 1 0 8]\n"
+      "[1 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 1 'No' '2' 'No' 'No' 1 0 0 8]\n"
      ]
     }
    ],
    "source": [
     "print(x_train[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'Fever,Tiredness,Dry-Cough,Difficulty-in-Breathing,Sore-Throat,None_Sympton,Pains,Nasal-Congestion,Runny-Nose,Diarrhea,None_Experiencing,Age_0-9,Age_10-19,Age_20-24,Age_25-59,Age_60+,Gender_Female,Gender_Male,Gender_Transgender,Severity_Mild,Severity_Moderate,Severity_None,Severity_Severe,Contact_Dont-Know,Contact_No,Contact_Yes,Country'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-bc6173a7bc74>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[0mY\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m     \u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     32\u001b[0m     \u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m     \u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'Fever,Tiredness,Dry-Cough,Difficulty-in-Breathing,Sore-Throat,None_Sympton,Pains,Nasal-Congestion,Runny-Nose,Diarrhea,None_Experiencing,Age_0-9,Age_10-19,Age_20-24,Age_25-59,Age_60+,Gender_Female,Gender_Male,Gender_Transgender,Severity_Mild,Severity_Moderate,Severity_None,Severity_Severe,Contact_Dont-Know,Contact_No,Contact_Yes,Country'"
+     ]
+    }
+   ],
+   "source": [
+    "Fever_values = []\n",
+    "Tiredness_values = []\n",
+    "Dry_Cough_values=[]\n",
+    "Difficulty_Breathing_values = []\n",
+    "Sore_Throat_values = []\n",
+    "No_Symptoms_values=[]\n",
+    "Pains_values = []\n",
+    "Nasal_Congestion_values = []\n",
+    "Runny_Nose_values=[]\n",
+    "Diarrhea_values = []\n",
+    "#\n",
+    "classes = ['None','Mild','Moderate','Severe']\n",
+    "features = ['Fever,','Tiredness', 'Dry-Cough','Difficulty-in-Breathing','Sore-Throat','None_Sympton',\n",
+    "            'Pains','Nasal-Congestion','Runny-Nose','Diarrhea']\n",
+    "#\n",
+    "classes2code = {}\n",
+    "code2classes = {}\n",
+    "i=0\n",
+    "for v in classes:\n",
+    "    classes2code[v]=i\n",
+    "    code2classes[i]=v\n",
+    "    i+=1\n",
+    "#\n",
+    "#\n",
+    "# convert dataset to numpy arrays\n",
+    "n = len(features)  # number of features\n",
+    "m = len(data)  # number of instances\n",
+    "X = np.zeros([m,n],dtype=float)\n",
+    "Y = np.zeros([m],dtype=float)\n",
+    "for i in range(m):\n",
+    "    X[i,0] = data[i][0]\n",
+    "    X[i,1] = data[i][1]\n",
+    "    X[i,2] = data[i][2]\n",
+    "    X[i,3] = data[i][3]\n",
+    "    X[i,4] = data[i][4]\n",
+    "    X[i,5] = data[i][5]\n",
+    "    X[i,6] = data[i][6]\n",
+    "    X[i,7] = data[i][7]\n",
+    "    X[i,8] = data[i][8]\n",
+    "    X[i,9] = data[i][9]\n",
+    "    Y[i] = classes2code[data[i][10]]"
    ]
   },
   {
@@ -1394,63 +1489,6 @@
     "plt.ylabel('Error')\n",
     "plt.xlabel('Iterations')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Decision Tree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "height_values = []\n",
-    "acceleration_values = []\n",
-    "no_wheels_values=[]\n",
-    "width_values = []\n",
-    "length_values = []\n",
-    "fairing_values=[]\n",
-    "weight_values = []\n",
-    "max_speed_values = []\n",
-    "torque_values=[]\n",
-    "colour_values = []\n",
-    "#\n",
-    "classes = ['Yoshi','Golden_Mario','Luigi','Link','Mario','Shy_guy','Peachet','Wa_Luigi']\n",
-    "features = ['height','acceleration','no_wheels','width','length','fairing','weight','max_speed','torque','colour']\n",
-    "\n",
-    "#\n",
-    "classes2code = {}\n",
-    "code2classes = {}\n",
-    "i=0\n",
-    "for v in classes:\n",
-    "    classes2code[v]=i\n",
-    "    code2classes[i]=v\n",
-    "    i+=1\n",
-    "#\n",
-    "#\n",
-    "# convert dataset to numpy arrays\n",
-    "n = len(features)  # number of features\n",
-    "m = len(data)  # number of instances\n",
-    "X = np.zeros([m,n],dtype=float)\n",
-    "Y = np.zeros([m],dtype=float)\n",
-    "for i in range(m):\n",
-    "    X[i,0] = data[i][0]\n",
-    "    X[i,1] = data[i][1]\n",
-    "    X[i,2] = data[i][2]\n",
-    "    X[i,3] = data[i][3]\n",
-    "    X[i,4] = data[i][4]\n",
-    "    X[i,5] = data[i][5]\n",
-    "    X[i,6] = data[i][6]\n",
-    "    X[i,7] = data[i][7]\n",
-    "    X[i,8] = data[i][8]\n",
-    "    X[i,9] = data[i][9]\n",
-    "    Y[i] = classes2code[data[i][10]]\n",
-    "    "
    ]
   }
  ],
