--- a/Applied_Machine_Learning_Assignment.ipynb
+++ b/Applied_Machine_Learning_Assignment.ipynb
@@ -384,16 +384,16 @@
     {
      "data": {
       "text/plain": [
-       "Iran                  31680\n",
-       "Germany               31680\n",
-       "Republic of Korean    31680\n",
+       "Italy                 31680\n",
+       "Other                 31680\n",
        "China                 31680\n",
+       "Republic of Korean    31680\n",
        "Spain                 31680\n",
        "France                31680\n",
-       "Other-EUR             31680\n",
+       "Germany               31680\n",
+       "Iran                  31680\n",
        "UAE                   31680\n",
-       "Other                 31680\n",
-       "Italy                 31680\n",
+       "Other-EUR             31680\n",
        "Name: Country, dtype: int64"
       ]
      },
@@ -1150,8 +1150,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "headers= df.columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X= pd.DataFrame.to_numpy(df.drop(['Condition'],axis=1))\n",
     "y= pd.DataFrame.to_numpy(df['Condition'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X= np.delete(X,19,1)\n",
+    "X= np.delete(X,19,1)\n",
+    "X= np.delete(X,19,1)\n",
+    "X= np.delete(X,19,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Fever', 'Tiredness', 'Dry-Cough', 'Difficulty-in-Breathing', 'Sore-Throat', 'None_Sympton', 'Pains', 'Nasal-Congestion', 'Runny-Nose', 'Diarrhea', 'None_Experiencing', 'Age_0-9', 'Age_10-19', 'Age_20-24', 'Age_25-59', 'Age_60+', 'Gender_Female', 'Gender_Male', 'Gender_Transgender', 'Severity_Mild', 'Severity_Moderate', 'Severity_None', 'Severity_Severe', 'Contact_Dont-Know', 'Contact_No', 'Contact_Yes', 'Country', 'Condition']\n",
+      "['Fever', 'Tiredness', 'Dry-Cough', 'Difficulty-in-Breathing', 'Sore-Throat', 'None_Sympton', 'Pains', 'Nasal-Congestion', 'Runny-Nose', 'Diarrhea', 'None_Experiencing', 'Age_0-9', 'Age_10-19', 'Age_20-24', 'Age_25-59', 'Age_60+', 'Gender_Female', 'Gender_Male', 'Gender_Transgender', 'Contact_Dont-Know', 'Contact_No', 'Contact_Yes', 'Country', 'Condition']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(headers)\n",
+    "headers.remove('Severity_Mild')\n",
+    "headers.remove('Severity_Moderate')\n",
+    "headers.remove('Severity_None')\n",
+    "headers.remove('Severity_Severe')\n",
+    "print(headers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chi Square"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_max(x):\n",
+    "    max_val = 0\n",
+    "    for i in x:\n",
+    "        if i>max_val:\n",
+    "            max_val = i\n",
+    "    return max_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_min(x):\n",
+    "    min_val = 99\n",
+    "    for i in x:\n",
+    "        if i<min_val:\n",
+    "            min_val = i\n",
+    "    return min_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = y.astype(np.int)"
    ]
   },
   {
@@ -1160,25 +1248,95 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(array([[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]]),\n",
-       " array(['1', '1', '1', ..., '0', '0', '0'], dtype=object))"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fever\n",
+      "Tiredness\n",
+      "Dry-Cough\n",
+      "Difficulty-in-Breathing\n",
+      "Sore-Throat\n",
+      "None_Sympton\n",
+      "Pains\n",
+      "Nasal-Congestion\n",
+      "Runny-Nose\n",
+      "Diarrhea\n",
+      "None_Experiencing\n",
+      "Age_0-9\n",
+      "Age_10-19\n",
+      "Age_20-24\n",
+      "Age_25-59\n",
+      "Age_60+\n",
+      "Gender_Female\n",
+      "Gender_Male\n",
+      "Gender_Transgender\n",
+      "Contact_Dont-Know\n",
+      "Contact_No\n",
+      "Contact_Yes\n",
+      "Country\n"
+     ]
     }
    ],
    "source": [
-    "X,y"
+    "contingency_table = {}\n",
+    "\n",
+    "for x_col in range(X.shape[1]):\n",
+    "    col = X[:,x_col]\n",
+    "    print(headers[x_col])\n",
+    "    \n",
+    "    for val_x in range(get_max(col)+1):\n",
+    "        count=0\n",
+    "        for val_y in range(get_max(y)+1):\n",
+    "            \n",
+    "            contingency_table[headers[x_col],val_x,val_y] = 0\n",
+    "                #count=0\n",
+    "                #if i == val:\n",
+    "                    #count = count+1\n",
+    "\n",
+    "            #contingency_table[headers[x_col],val,] = [val, count]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{('Fever', 0, 0): 0, ('Fever', 0, 1): 0, ('Fever', 0, 2): 0, ('Fever', 0, 3): 0, ('Fever', 1, 0): 0, ('Fever', 1, 1): 0, ('Fever', 1, 2): 0, ('Fever', 1, 3): 0, ('Tiredness', 0, 0): 0, ('Tiredness', 0, 1): 0, ('Tiredness', 0, 2): 0, ('Tiredness', 0, 3): 0, ('Tiredness', 1, 0): 0, ('Tiredness', 1, 1): 0, ('Tiredness', 1, 2): 0, ('Tiredness', 1, 3): 0, ('Dry-Cough', 0, 0): 0, ('Dry-Cough', 0, 1): 0, ('Dry-Cough', 0, 2): 0, ('Dry-Cough', 0, 3): 0, ('Dry-Cough', 1, 0): 0, ('Dry-Cough', 1, 1): 0, ('Dry-Cough', 1, 2): 0, ('Dry-Cough', 1, 3): 0, ('Difficulty-in-Breathing', 0, 0): 0, ('Difficulty-in-Breathing', 0, 1): 0, ('Difficulty-in-Breathing', 0, 2): 0, ('Difficulty-in-Breathing', 0, 3): 0, ('Difficulty-in-Breathing', 1, 0): 0, ('Difficulty-in-Breathing', 1, 1): 0, ('Difficulty-in-Breathing', 1, 2): 0, ('Difficulty-in-Breathing', 1, 3): 0, ('Sore-Throat', 0, 0): 0, ('Sore-Throat', 0, 1): 0, ('Sore-Throat', 0, 2): 0, ('Sore-Throat', 0, 3): 0, ('Sore-Throat', 1, 0): 0, ('Sore-Throat', 1, 1): 0, ('Sore-Throat', 1, 2): 0, ('Sore-Throat', 1, 3): 0, ('None_Sympton', 0, 0): 0, ('None_Sympton', 0, 1): 0, ('None_Sympton', 0, 2): 0, ('None_Sympton', 0, 3): 0, ('None_Sympton', 1, 0): 0, ('None_Sympton', 1, 1): 0, ('None_Sympton', 1, 2): 0, ('None_Sympton', 1, 3): 0, ('Pains', 0, 0): 0, ('Pains', 0, 1): 0, ('Pains', 0, 2): 0, ('Pains', 0, 3): 0, ('Pains', 1, 0): 0, ('Pains', 1, 1): 0, ('Pains', 1, 2): 0, ('Pains', 1, 3): 0, ('Nasal-Congestion', 0, 0): 0, ('Nasal-Congestion', 0, 1): 0, ('Nasal-Congestion', 0, 2): 0, ('Nasal-Congestion', 0, 3): 0, ('Nasal-Congestion', 1, 0): 0, ('Nasal-Congestion', 1, 1): 0, ('Nasal-Congestion', 1, 2): 0, ('Nasal-Congestion', 1, 3): 0, ('Runny-Nose', 0, 0): 0, ('Runny-Nose', 0, 1): 0, ('Runny-Nose', 0, 2): 0, ('Runny-Nose', 0, 3): 0, ('Runny-Nose', 1, 0): 0, ('Runny-Nose', 1, 1): 0, ('Runny-Nose', 1, 2): 0, ('Runny-Nose', 1, 3): 0, ('Diarrhea', 0, 0): 0, ('Diarrhea', 0, 1): 0, ('Diarrhea', 0, 2): 0, ('Diarrhea', 0, 3): 0, ('Diarrhea', 1, 0): 0, ('Diarrhea', 1, 1): 0, ('Diarrhea', 1, 2): 0, ('Diarrhea', 1, 3): 0, ('None_Experiencing', 0, 0): 0, ('None_Experiencing', 0, 1): 0, ('None_Experiencing', 0, 2): 0, ('None_Experiencing', 0, 3): 0, ('None_Experiencing', 1, 0): 0, ('None_Experiencing', 1, 1): 0, ('None_Experiencing', 1, 2): 0, ('None_Experiencing', 1, 3): 0, ('Age_0-9', 0, 0): 0, ('Age_0-9', 0, 1): 0, ('Age_0-9', 0, 2): 0, ('Age_0-9', 0, 3): 0, ('Age_0-9', 1, 0): 0, ('Age_0-9', 1, 1): 0, ('Age_0-9', 1, 2): 0, ('Age_0-9', 1, 3): 0, ('Age_10-19', 0, 0): 0, ('Age_10-19', 0, 1): 0, ('Age_10-19', 0, 2): 0, ('Age_10-19', 0, 3): 0, ('Age_10-19', 1, 0): 0, ('Age_10-19', 1, 1): 0, ('Age_10-19', 1, 2): 0, ('Age_10-19', 1, 3): 0, ('Age_20-24', 0, 0): 0, ('Age_20-24', 0, 1): 0, ('Age_20-24', 0, 2): 0, ('Age_20-24', 0, 3): 0, ('Age_20-24', 1, 0): 0, ('Age_20-24', 1, 1): 0, ('Age_20-24', 1, 2): 0, ('Age_20-24', 1, 3): 0, ('Age_25-59', 0, 0): 0, ('Age_25-59', 0, 1): 0, ('Age_25-59', 0, 2): 0, ('Age_25-59', 0, 3): 0, ('Age_25-59', 1, 0): 0, ('Age_25-59', 1, 1): 0, ('Age_25-59', 1, 2): 0, ('Age_25-59', 1, 3): 0, ('Age_60+', 0, 0): 0, ('Age_60+', 0, 1): 0, ('Age_60+', 0, 2): 0, ('Age_60+', 0, 3): 0, ('Age_60+', 1, 0): 0, ('Age_60+', 1, 1): 0, ('Age_60+', 1, 2): 0, ('Age_60+', 1, 3): 0, ('Gender_Female', 0, 0): 0, ('Gender_Female', 0, 1): 0, ('Gender_Female', 0, 2): 0, ('Gender_Female', 0, 3): 0, ('Gender_Female', 1, 0): 0, ('Gender_Female', 1, 1): 0, ('Gender_Female', 1, 2): 0, ('Gender_Female', 1, 3): 0, ('Gender_Male', 0, 0): 0, ('Gender_Male', 0, 1): 0, ('Gender_Male', 0, 2): 0, ('Gender_Male', 0, 3): 0, ('Gender_Male', 1, 0): 0, ('Gender_Male', 1, 1): 0, ('Gender_Male', 1, 2): 0, ('Gender_Male', 1, 3): 0, ('Gender_Transgender', 0, 0): 0, ('Gender_Transgender', 0, 1): 0, ('Gender_Transgender', 0, 2): 0, ('Gender_Transgender', 0, 3): 0, ('Gender_Transgender', 1, 0): 0, ('Gender_Transgender', 1, 1): 0, ('Gender_Transgender', 1, 2): 0, ('Gender_Transgender', 1, 3): 0, ('Contact_Dont-Know', 0, 0): 0, ('Contact_Dont-Know', 0, 1): 0, ('Contact_Dont-Know', 0, 2): 0, ('Contact_Dont-Know', 0, 3): 0, ('Contact_Dont-Know', 1, 0): 0, ('Contact_Dont-Know', 1, 1): 0, ('Contact_Dont-Know', 1, 2): 0, ('Contact_Dont-Know', 1, 3): 0, ('Contact_No', 0, 0): 0, ('Contact_No', 0, 1): 0, ('Contact_No', 0, 2): 0, ('Contact_No', 0, 3): 0, ('Contact_No', 1, 0): 0, ('Contact_No', 1, 1): 0, ('Contact_No', 1, 2): 0, ('Contact_No', 1, 3): 0, ('Contact_Yes', 0, 0): 0, ('Contact_Yes', 0, 1): 0, ('Contact_Yes', 0, 2): 0, ('Contact_Yes', 0, 3): 0, ('Contact_Yes', 1, 0): 0, ('Contact_Yes', 1, 1): 0, ('Contact_Yes', 1, 2): 0, ('Contact_Yes', 1, 3): 0, ('Country', 0, 0): 0, ('Country', 0, 1): 0, ('Country', 0, 2): 0, ('Country', 0, 3): 0, ('Country', 1, 0): 0, ('Country', 1, 1): 0, ('Country', 1, 2): 0, ('Country', 1, 3): 0, ('Country', 2, 0): 0, ('Country', 2, 1): 0, ('Country', 2, 2): 0, ('Country', 2, 3): 0, ('Country', 3, 0): 0, ('Country', 3, 1): 0, ('Country', 3, 2): 0, ('Country', 3, 3): 0, ('Country', 4, 0): 0, ('Country', 4, 1): 0, ('Country', 4, 2): 0, ('Country', 4, 3): 0, ('Country', 5, 0): 0, ('Country', 5, 1): 0, ('Country', 5, 2): 0, ('Country', 5, 3): 0, ('Country', 6, 0): 0, ('Country', 6, 1): 0, ('Country', 6, 2): 0, ('Country', 6, 3): 0, ('Country', 7, 0): 0, ('Country', 7, 1): 0, ('Country', 7, 2): 0, ('Country', 7, 3): 0, ('Country', 8, 0): 0, ('Country', 8, 1): 0, ('Country', 8, 2): 0, ('Country', 8, 3): 0, ('Country', 9, 0): 0, ('Country', 9, 1): 0, ('Country', 9, 2): 0, ('Country', 9, 3): 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(contingency_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fever\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x_col in range(X.shape[1]):\n",
+    "    col = X[:,x_col]\n",
+    "    print(headers[x_col])\n",
+    "    \n",
+    "    for i in col:\n",
+    "        for j in y:\n",
+    "            contingency_table[headers[x_col],i,j] +=1\n",
+    "                "
    ]
   },
   {
@@ -1244,80 +1402,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 1 'No' '2' 'No' 'No' 1 0 0 8]\n"
+      "[0 0 1 0 0 0 1 0 0 0 0 1 0 0 0 0 0 1 0 'No' 'No' 'No' '3' 1 0 0 3]\n"
      ]
     }
    ],
    "source": [
     "print(x_train[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Decision Tree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: 'Fever,Tiredness,Dry-Cough,Difficulty-in-Breathing,Sore-Throat,None_Sympton,Pains,Nasal-Congestion,Runny-Nose,Diarrhea,None_Experiencing,Age_0-9,Age_10-19,Age_20-24,Age_25-59,Age_60+,Gender_Female,Gender_Male,Gender_Transgender,Severity_Mild,Severity_Moderate,Severity_None,Severity_Severe,Contact_Dont-Know,Contact_No,Contact_Yes,Country'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-20-bc6173a7bc74>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[0mY\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m     \u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     32\u001b[0m     \u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m     \u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'Fever,Tiredness,Dry-Cough,Difficulty-in-Breathing,Sore-Throat,None_Sympton,Pains,Nasal-Congestion,Runny-Nose,Diarrhea,None_Experiencing,Age_0-9,Age_10-19,Age_20-24,Age_25-59,Age_60+,Gender_Female,Gender_Male,Gender_Transgender,Severity_Mild,Severity_Moderate,Severity_None,Severity_Severe,Contact_Dont-Know,Contact_No,Contact_Yes,Country'"
-     ]
-    }
-   ],
-   "source": [
-    "Fever_values = []\n",
-    "Tiredness_values = []\n",
-    "Dry_Cough_values=[]\n",
-    "Difficulty_Breathing_values = []\n",
-    "Sore_Throat_values = []\n",
-    "No_Symptoms_values=[]\n",
-    "Pains_values = []\n",
-    "Nasal_Congestion_values = []\n",
-    "Runny_Nose_values=[]\n",
-    "Diarrhea_values = []\n",
-    "#\n",
-    "classes = ['None','Mild','Moderate','Severe']\n",
-    "features = ['Fever,','Tiredness', 'Dry-Cough','Difficulty-in-Breathing','Sore-Throat','None_Sympton',\n",
-    "            'Pains','Nasal-Congestion','Runny-Nose','Diarrhea']\n",
-    "#\n",
-    "classes2code = {}\n",
-    "code2classes = {}\n",
-    "i=0\n",
-    "for v in classes:\n",
-    "    classes2code[v]=i\n",
-    "    code2classes[i]=v\n",
-    "    i+=1\n",
-    "#\n",
-    "#\n",
-    "# convert dataset to numpy arrays\n",
-    "n = len(features)  # number of features\n",
-    "m = len(data)  # number of instances\n",
-    "X = np.zeros([m,n],dtype=float)\n",
-    "Y = np.zeros([m],dtype=float)\n",
-    "for i in range(m):\n",
-    "    X[i,0] = data[i][0]\n",
-    "    X[i,1] = data[i][1]\n",
-    "    X[i,2] = data[i][2]\n",
-    "    X[i,3] = data[i][3]\n",
-    "    X[i,4] = data[i][4]\n",
-    "    X[i,5] = data[i][5]\n",
-    "    X[i,6] = data[i][6]\n",
-    "    X[i,7] = data[i][7]\n",
-    "    X[i,8] = data[i][8]\n",
-    "    X[i,9] = data[i][9]\n",
-    "    Y[i] = classes2code[data[i][10]]"
    ]
   },
   {
@@ -1489,6 +1579,63 @@
     "plt.ylabel('Error')\n",
     "plt.xlabel('Iterations')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "height_values = []\n",
+    "acceleration_values = []\n",
+    "no_wheels_values=[]\n",
+    "width_values = []\n",
+    "length_values = []\n",
+    "fairing_values=[]\n",
+    "weight_values = []\n",
+    "max_speed_values = []\n",
+    "torque_values=[]\n",
+    "colour_values = []\n",
+    "#\n",
+    "classes = ['Yoshi','Golden_Mario','Luigi','Link','Mario','Shy_guy','Peachet','Wa_Luigi']\n",
+    "features = ['height','acceleration','no_wheels','width','length','fairing','weight','max_speed','torque','colour']\n",
+    "\n",
+    "#\n",
+    "classes2code = {}\n",
+    "code2classes = {}\n",
+    "i=0\n",
+    "for v in classes:\n",
+    "    classes2code[v]=i\n",
+    "    code2classes[i]=v\n",
+    "    i+=1\n",
+    "#\n",
+    "#\n",
+    "# convert dataset to numpy arrays\n",
+    "n = len(features)  # number of features\n",
+    "m = len(data)  # number of instances\n",
+    "X = np.zeros([m,n],dtype=float)\n",
+    "Y = np.zeros([m],dtype=float)\n",
+    "for i in range(m):\n",
+    "    X[i,0] = data[i][0]\n",
+    "    X[i,1] = data[i][1]\n",
+    "    X[i,2] = data[i][2]\n",
+    "    X[i,3] = data[i][3]\n",
+    "    X[i,4] = data[i][4]\n",
+    "    X[i,5] = data[i][5]\n",
+    "    X[i,6] = data[i][6]\n",
+    "    X[i,7] = data[i][7]\n",
+    "    X[i,8] = data[i][8]\n",
+    "    X[i,9] = data[i][9]\n",
+    "    Y[i] = classes2code[data[i][10]]\n",
+    "    "
    ]
   }
  ],
