--- a/Applied_Machine_Learning_Assignment.ipynb
+++ b/Applied_Machine_Learning_Assignment.ipynb
@@ -384,16 +384,16 @@
     {
      "data": {
       "text/plain": [
-       "Iran                  31680\n",
+       "Italy                 31680\n",
        "Other                 31680\n",
+       "UAE                   31680\n",
        "Spain                 31680\n",
-       "Republic of Korean    31680\n",
        "China                 31680\n",
+       "Other-EUR             31680\n",
+       "Iran                  31680\n",
+       "Republic of Korean    31680\n",
        "France                31680\n",
        "Germany               31680\n",
-       "UAE                   31680\n",
-       "Other-EUR             31680\n",
-       "Italy                 31680\n",
        "Name: Country, dtype: int64"
       ]
      },
@@ -1760,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -1769,17 +1769,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1,\n",
-       "       2], dtype=object)"
+       "array([0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0,\n",
+       "       1], dtype=object)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53661,6 +53661,136 @@
    "metadata": {},
    "source": [
     "# Neural Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hidden_layer_sizes': [(200, 100, 50, 25), (100, 50, 25, 10), (200, 100, 50, 25, 10)], 'alpha': array([0.1 , 0.14, 0.18, 0.22, 0.26, 0.3 ])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "NN = MLPClassifier(max_iter=5000)\n",
+    "hidden_layer_size = [(200,100,50,25),(100,50,25,10),(200,100,50,25,10)]\n",
+    "alpha = np.linspace(0.1, 0.3, num = 6)\n",
+    "param_grid = dict(hidden_layer_sizes=hidden_layer_size,alpha = alpha)\n",
+    "print(param_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = GridSearchCV(NN, param_grid=param_grid, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1h 46min 14s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=MLPClassifier(max_iter=5000),\n",
+       "             param_grid={'alpha': array([0.1 , 0.14, 0.18, 0.22, 0.26, 0.3 ]),\n",
+       "                         'hidden_layer_sizes': [(200, 100, 50, 25),\n",
+       "                                                (100, 50, 25, 10),\n",
+       "                                                (200, 100, 50, 25, 10)]})"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time grid.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLPClassifier(alpha=0.21999999999999997, hidden_layer_sizes=(100, 50, 25, 10),\n",
+      "              max_iter=5000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(grid.best_estimator_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_predictions = grid.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.26      0.97      0.41      1564\n",
+      "           1       0.00      0.00      0.00      1409\n",
+      "           2       0.23      0.02      0.04      1482\n",
+      "           3       0.00      0.00      0.00      1545\n",
+      "\n",
+      "    accuracy                           0.26      6000\n",
+      "   macro avg       0.12      0.25      0.11      6000\n",
+      "weighted avg       0.12      0.26      0.12      6000\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Chris\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, grid_predictions))"
    ]
   },
   {
